--- a/templates/courses/search_results.html
+++ b/templates/courses/search_results.html
@@ -27,51 +27,10 @@
     <!--end of col-->
 </div>
 <div class='container mt-4'>
-    <div class='row col-12 mt-3 mb-3'>
+    <div class='row col-12 m-0 mt-3 mb-3'>
         {% if courses  %}
             {% for course in courses %}
-            <div class='col-md-4 col-12 pt-2'>
-                
-                <div class="card shadow">
-                    <img src="{% if course.photo %}/media/{{course.photo}}{% else %}{% static 'img/placeholder.svg' %}{% endif %}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">{{course.title}}</h5>
-                        <p class="card-text">{{course.description|truncatewords:20}}</p>
-                    </div>
-                    <div class='card-body p-0 px-3'>
-                        <div class="col-12 row m-auto">
-                            <button class="btn btn-dark mb-2 col-5 mr-2" type="button" data-toggle="collapse" data-target="#collapse-{{course.id}}" aria-expanded="false" aria-controls="collapse-{{course.id}}">
-                                View Dates
-                            </button>
-                            <a class='btn btn-outline-secondary btn-block col-5 mb-2' href="{% url 'course_detail' course.id %}">{% trans "course info" %}</a>
-                        </div>
-                        <div class="collapse mb-2" id="collapse-{{course.id}}">
-                            <div class="card card-body">
-                                {% if course.courseDates.count > 0 %}
-                                    {% for courseDate in course.courseDates.all %}
-                                        <div class='row text-muted'>
-                                            <h5>{{courseDate.date}}</h5>
-                                            <div class='col-12 p-0 mb-1'>
-                                                <i class='fa fa-chair'></i>
-                                                {{courseDate.remainPlaces}} {% trans "places remaining" %}
-                                            </div>
-                                            <div class='col-12 p-0 mb-1'>
-                                                <i class='fa fa-money-bill-wave'></i>
-                                                {{courseDate.price}} {{courseDate.currency}}
-                                            </div>
-                                            <a class='btn btn-primary btn-block' href="{% url 'enroll' courseDate.id %}">{% trans "Enroll" %}</a>
-                                        </div>
-                                        <hr>
-                                    {% endfor %}
-                                {% else %}
-                                    <h3>No Dates For Now...</h3>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                
-            </div>
+                {% include 'partials/_course_card.html' with course=course courseDates=course.courseDates %}
             {% endfor %}
         {% else %}
             <div>
