--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -44,13 +44,28 @@
                             
                             <div class="card shadow">
                                 <img src="{% if courseDate.course.photo %}/media/{{courseDate.course.photo}}{% else %}{% static 'img/placeholder.svg' %}{% endif %}" class="card-img-top" alt="...">
-                                <div class="card-body">
+                                <div class="card-body p-2">
                                     <h5 class="card-title">{{courseDate.course.title}}</h5>
                                     <p class="card-text">{{courseDate.course.description|truncatewords:20}}</p>
+
+                                    <div class="col-12 row m-auto">
+                                        <button class="btn btn-dark m-auto mb-2 col-5" type="button" data-toggle="collapse" data-target="#collapse-{{course.id}}" aria-expanded="false" aria-controls="collapse-{{course.id}}">
+                                            View Links
+                                        </button>
+                                        <a class='btn btn-outline-secondary btn-block col-5 m-auto' href="{% url 'course_detail' courseDate.course.id %}">{% trans "course info" %}</a>
+                                    </div>
+                                    <div class="collapse mt-2 mb-2" id="collapse-{{course.id}}">
+                                        {% if courseDate.course.links %}
+                                            <ol>
+                                                {% for link in courseDate.course.links %}
+                                                    <li> <a href="{{link}}">{{link|truncatechars:30}}</a> </li>
+                                                {% endfor %}
+                                            </ol>
+                                        {% endif %}
+                                    </div>
                                 </div>
                                 <div class='card-body p-0 pb-4 px-3'>
                                     <p class='card-text'>{% trans "Enrolled for : " %}{{courseDate.date}}</p>
-                                    <a class='btn btn-outline-secondary btn-block' href="{% url 'course_detail' courseDate.course.id %}">{% trans "view more" %}</a>
                                 </div>
                             </div>
                             
