--- a/templates/courses/enrollement.html
+++ b/templates/courses/enrollement.html
@@ -27,7 +27,7 @@
                     <h3 class='card-title'>{{courseDate.course.title}}</h3>
                     <ul class="list-group">
                         <li class="list-group-item">{{courseDate.date}}</li>
-                        <li class="list-group-item">Tutor {{courseDate.teacher.get_full_name}}</li>
+                        <li class="list-group-item"> <a class="" href="{% url 'resume_get' courseDate.teacher.pk %}"><strong>{% trans "Tutor: " %}</strong>{{courseDate.teacher.get_full_name}}</a></li>
                         <li class="list-group-item">{{courseDate.price}} {{courseDate.currency}} Enrollement Fee</li>
                     </ul>
                     <div class='row justify-content-center'>
