--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -28,9 +28,9 @@
                                         <h5>{% trans "Dates" %}</h5>
                                     </div>
                                     <div class="card-body" style="max-height:500px;overflow-y:scroll">
-                                        {% if course.courseDates.count > 0 %}
-                                            {% for courseDate in course.courseDates.all %}
-                                                <div class='row text-muted'>
+                                        {% if courseDates.count > 0 %}
+                                            {% for courseDate in courseDates.all %}
+                                                <div class='row text-muted p-1 list-group-item mb-1'>
                                                     <h5>{{courseDate.date}}</h5>
                                                     <div class='col-12 p-0 mb-1'>
                                                         <i class='fa fa-chair'></i>
@@ -40,9 +40,9 @@
                                                         <i class='fa fa-money-bill-wave'></i>
                                                         {{courseDate.price}} {{courseDate.currency}}
                                                     </div>
+                                                    <a class="" href="{% url 'resume_get' courseDate.teacher.pk %}"><strong>{% trans "Tutor: " %}</strong>{{courseDate.teacher.get_full_name}}</a>
                                                     <a class='btn btn-primary col-md-6 m-auto btn-block' href="{% url 'enroll' courseDate.id %}">{% trans "Enroll" %}</a>
                                                 </div>
-                                                <hr>
                                             {% endfor %}
                                         {% else %}
                                             <h3>No Dates For Now...</h3>
