--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -18,7 +18,7 @@
             <form action="{% url 'search_results' %}" class="card  opacity-6 card-sm shadow">
                 <div class="p-2 pr-3 pl-3 row no-gutters align-items-center">
                     <div class="col-auto">
-                        <i class="fas fa-search text-body"></i>
+                        <i class="fas pt-1 h4 fa-search text-body"></i>
                     </div>
                     <!--end of col-->
                     <div class="col">
