--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -18,8 +18,8 @@
 	            <div class="row justify-content-center mt-2">
                         <div class="col-12 col-md-10 col-lg-8  text-white">
                             <form action="{% url 'search_results' %}" class="card  opacity-6 card-sm">
-                                <div class="card-body row no-gutters align-items-center">
-                                    <div class="col-auto">
+                                <div class="p-2 pr-3 pl-3 row no-gutters align-items-center">
+                                    <div class="col-auto pt-1">
                                         <i class="fas fa-search h4 text-body"></i>
                                     </div>
                                     <!--end of col-->
