--- a/templates/bases/index.html
+++ b/templates/bases/index.html
@@ -28,8 +28,8 @@
 
 
     <!-- Favicons -->
-    <link href="{% static 'img/images.png' %}" rel="icon">
-    <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+    <link href="{% static 'img/favicon.png' %}" rel="icon">
+    <link href="{% static 'img/favicon.png' %}" rel="apple-touch-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
